--- a/Eindopdracht/package.json
+++ b/Eindopdracht/package.json
@@ -15,8 +15,11 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "cocoapods": "^0.0.0",
     "expo": "~45.0.0",
+    "expo-asset": "~8.5.0",
     "expo-dark-mode-switch": "^0.0.2",
+    "expo-file-system": "~14.0.0",
     "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
@@ -28,10 +31,13 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "expo-sqlite": "~10.2.0",
+    "@react-native-community/netinfo": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
